# cmake_study

./: a
Step2/: CMakeLists.txt  TutorialConfig.h.in
Step3/MathFunctions/: Addd.cxx
book001/chapter-07/recipe-08/cxx-example/src/: CMakeLists.txt
book001/chapter-07/recipe-08/cxx-example/src/evolution/: cd -
lib_not_same_folder/MathFunctions/: CMakeLists.txt
multi_level_folder_libs/: CMakeLists.txt  tutorial.cxx
multi_level_folder_libs/MathFunctions/: CMakeLists.txt
multi_level_folder_libs/MathFunctions/hello/: CMakeLists.txt
multi_level_folder_libs_target_sources/: CMakeLists.txt
multi_level_folder_libs_target_sources/MathFunctions/: Addd.h  CMakeLists.txt  Mysqrt.cxx
multi_level_folder_libs_target_sources/MathFunctions/hello/: Subb.cpp
multi_level_folder_onelib/: CMakeLists.txt
multi_level_folder_onelib/MathFunctions/: CMakeLists.txt
multi_level_folder_onelib/MathFunctions/hello/: CMakeLists.txt  Subb.h
multi_libs_same_folder/: CMakeLists.txt
target_sources_001/: CMakeLists.txt
target_sources_001/src/: CMakeLists.txt
target_sources_001/src/evolution/: CMakeLists.txt
two_libs_same_folder/: CMakeLists.txt
two_libs_same_folder/MathFunctions/: CMakeLists.txt
